# stock_new_analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: python-tests.yml
scripts/: setup_precommit.sh
stock_news_analyzer/: analyzer.py  cli.py  filter.py  finder.py  main.py  model.py
stock_news_analyzer/utils/: __init__.py  company_code.py  logger.py
tests/unit/: test_cli.py  test_finder.py
