[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_news_analyzer"
version = "0.1.0"
description = "Gather, summarize, and analyze stock related news with LLM🧠"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    {name = "Sungchul Kim", email = "sungchul7039@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bs4==0.0.2",
    "langchain-community==0.3.0",
    "langchain-openai==0.2.0",
    "python-dotenv==1.0.1",
    "aiohttp",
    "lxml",
    "openai",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.0",
    "mypy==1.8.0",
    "tox==4.14.1",
    "pre-commit==3.7.0",
]

[project.scripts]
stock-news-analyzer = "stock_news_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_news_analyzer*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = [
    'tests/'
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311
isolated_build = True

[testenv]
deps = .[dev]
commands =
    ruff check .
    mypy stock_news_analyzer

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files
"""
